--- a/slider/style.css
+++ b/slider/style.css
@@ -21,3 +21,12 @@
 .swiper-slide img{
     width: 100%;
 }
+
+.swiper .swiper-button-prev , .swiper .swiper-button-next{
+    color: #fff;
+
+}
+
+.swiper .swiper-pagination-bullet-active{
+    background: #fff;
+}
