--- a/count-down/styles.css
+++ b/count-down/styles.css
@@ -4,3 +4,10 @@ body {
     font-family: sans-serif;
     font-weight: 100;
 }
+
+h1 {
+    color: #1261a0;
+    font-weight: 100;
+    font-size: 50px;
+    margin: 100px 0 30px;
+}
