--- a/count-down/styles.css
+++ b/count-down/styles.css
@@ -11,3 +11,11 @@ h1 {
     font-size: 50px;
     margin: 100px 0 30px;
 }
+
+#clock {
+    font-family: sans-serif;
+    color: #fff;
+    font-weight: 100;
+    text-align: center;
+    font-size: 55px;
+}
