--- a/count-down/styles.css
+++ b/count-down/styles.css
@@ -19,3 +19,10 @@ h1 {
     text-align: center;
     font-size: 55px;
 }
+
+#clock > div {
+    padding: 50px;
+    display: inline-block;
+    border-radius: 15px;
+    background: #1f5a56;
+}
