--- a/count-down/styles.css
+++ b/count-down/styles.css
@@ -26,3 +26,10 @@ h1 {
     border-radius: 15px;
     background: #1f5a56;
 }
+
+#clock div > span {
+    padding: 65px;
+    border-radius: 15px;
+    background: #000;
+    display: inline-block;
+}
